# aoc-rs

./: Cargo.toml  flake.nix
benches/: benchmarks.rs
src/: cli.rs  lib.rs
src/solutions/y2024/: day01.rs  day04.rs  day07.rs
